etapa2/parser.output
Terminals unused in grammar

    TOKEN_ERROR


State 48 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ldef

    2 ldef: def ldef
    3     | ε

    4 def: type TK_IDENTIFIER '=' literal ';'
    5    | type TK_IDENTIFIER '[' LIT_INT ']' vector_init ';'
    6    | type TK_IDENTIFIER '(' function_init ')' command_block

    7 type: KW_INT
    8     | KW_BYTE
    9     | KW_REAL

   10 literal: LIT_INT
   11        | LIT_CHAR
   12        | LIT_REAL

   13 vector_init: ε
   14            | '=' literal vector_lits

   15 vector_lits: ε
   16            | ',' literal vector_lits

   17 function_init: ε
   18              | type TK_IDENTIFIER function_init2

   19 function_init2: ε
   20               | ',' type TK_IDENTIFIER function_init2

   21 command_block: '{' command_list '}'

   22 command_list: ε
   23             | command command_list

   24 command: command_block
   25        | TK_IDENTIFIER '=' expression ';'
   26        | TK_IDENTIFIER '[' expression ']' '=' expression ';'
   27        | KW_READ TK_IDENTIFIER ';'
   28        | KW_PRINT print ';'
   29        | KW_RETURN expression ';'
   30        | KW_IF '(' expression ')' command ';'
   31        | KW_IF '(' expression ')' command KW_ELSE command ';'
   32        | KW_WHILE expression KW_DO command
   33        | KW_DO command KW_WHILE '(' expression ')' ';'
   34        | ';'

   35 expression: TK_IDENTIFIER
   36           | TK_IDENTIFIER '[' expression ']'
   37           | literal
   38           | expression '+' expression
   39           | expression '-' expression
   40           | expression '*' expression
   41           | expression '/' expression
   42           | expression '<' expression
   43           | expression '>' expression
   44           | expression '=' expression
   45           | expression '&' expression
   46           | expression '|' expression
   47           | expression '~' expression
   48           | expression OPERATOR_DIF expression
   49           | expression OPERATOR_EQ expression
   50           | expression OPERATOR_GE expression
   51           | expression OPERATOR_LE expression
   52           | '(' expression ')'
   53           | TK_IDENTIFIER '(' function_args ')'

   54 function_args: ε
   55              | expression function_args2

   56 function_args2: ε
   57               | ',' expression function_args2

   58 print: LIT_STRING print2
   59      | expression print2

   60 print2: ε
   61       | LIT_STRING print2
   62       | expression print2


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 45
    '(' (40) 6 30 31 33 52 53
    ')' (41) 6 30 31 33 52 53
    '*' (42) 40
    '+' (43) 38
    ',' (44) 16 20 57
    '-' (45) 39
    '/' (47) 41
    ';' (59) 4 5 25 26 27 28 29 30 31 33 34
    '<' (60) 42
    '=' (61) 4 14 25 26 44
    '>' (62) 43
    '[' (91) 5 26 36
    ']' (93) 5 26 36
    '{' (123) 21
    '|' (124) 46
    '}' (125) 21
    '~' (126) 47
    error (256)
    KW_BYTE (258) 8
    KW_INT (259) 7
    KW_REAL (260) 9
    KW_IF (261) 30 31
    KW_ELSE (262) 31
    KW_DO (263) 32 33
    KW_WHILE (264) 32 33
    KW_READ (265) 27
    KW_PRINT (266) 28
    KW_RETURN (267) 29
    OPERATOR_LE (268) 51
    OPERATOR_GE (269) 50
    OPERATOR_EQ (270) 49
    OPERATOR_DIF (271) 48
    TK_IDENTIFIER (272) 4 5 6 18 20 25 26 27 35 36 53
    LIT_INT (273) 5 10
    LIT_CHAR (274) 11
    LIT_REAL (275) 12
    LIT_STRING (276) 58 61
    TOKEN_ERROR (277)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program (42)
        on left: 1
        on right: 0
    ldef (43)
        on left: 2 3
        on right: 1 2
    def (44)
        on left: 4 5 6
        on right: 2
    type (45)
        on left: 7 8 9
        on right: 4 5 6 18 20
    literal (46)
        on left: 10 11 12
        on right: 4 14 16 37
    vector_init (47)
        on left: 13 14
        on right: 5
    vector_lits (48)
        on left: 15 16
        on right: 14 16
    function_init (49)
        on left: 17 18
        on right: 6
    function_init2 (50)
        on left: 19 20
        on right: 18 20
    command_block (51)
        on left: 21
        on right: 6 24
    command_list (52)
        on left: 22 23
        on right: 21 23
    command (53)
        on left: 24 25 26 27 28 29 30 31 32 33 34
        on right: 23 30 31 32 33
    expression (54)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 25 26 29 30 31 32 33 36 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 55 57 59 62
    function_args (55)
        on left: 54 55
        on right: 53
    function_args2 (56)
        on left: 56 57
        on right: 55 57
    print (57)
        on left: 58 59
        on right: 28
    print2 (58)
        on left: 60 61 62
        on right: 58 59 61 62


State 0

    0 $accept: • program $end

    KW_BYTE  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3

    $default  reduce using rule 3 (ldef)

    program  go to state 4
    ldef     go to state 5
    def      go to state 6
    type     go to state 7


State 1

    8 type: KW_BYTE •

    $default  reduce using rule 8 (type)


State 2

    7 type: KW_INT •

    $default  reduce using rule 7 (type)


State 3

    9 type: KW_REAL •

    $default  reduce using rule 9 (type)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 8


State 5

    1 program: ldef •

    $default  reduce using rule 1 (program)


State 6

    2 ldef: def • ldef

    KW_BYTE  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3

    $default  reduce using rule 3 (ldef)

    ldef  go to state 9
    def   go to state 6
    type  go to state 7


State 7

    4 def: type • TK_IDENTIFIER '=' literal ';'
    5    | type • TK_IDENTIFIER '[' LIT_INT ']' vector_init ';'
    6    | type • TK_IDENTIFIER '(' function_init ')' command_block

    TK_IDENTIFIER  shift, and go to state 10


State 8

    0 $accept: program $end •

    $default  accept


State 9

    2 ldef: def ldef •

    $default  reduce using rule 2 (ldef)


State 10

    4 def: type TK_IDENTIFIER • '=' literal ';'
    5    | type TK_IDENTIFIER • '[' LIT_INT ']' vector_init ';'
    6    | type TK_IDENTIFIER • '(' function_init ')' command_block

    '='  shift, and go to state 11
    '('  shift, and go to state 12
    '['  shift, and go to state 13


State 11

    4 def: type TK_IDENTIFIER '=' • literal ';'

    LIT_INT   shift, and go to state 14
    LIT_CHAR  shift, and go to state 15
    LIT_REAL  shift, and go to state 16

    literal  go to state 17


State 12

    6 def: type TK_IDENTIFIER '(' • function_init ')' command_block

    KW_BYTE  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3

    $default  reduce using rule 17 (function_init)

    type           go to state 18
    function_init  go to state 19


State 13

    5 def: type TK_IDENTIFIER '[' • LIT_INT ']' vector_init ';'

    LIT_INT  shift, and go to state 20


State 14

   10 literal: LIT_INT •

    $default  reduce using rule 10 (literal)


State 15

   11 literal: LIT_CHAR •

    $default  reduce using rule 11 (literal)


State 16

   12 literal: LIT_REAL •

    $default  reduce using rule 12 (literal)


State 17

    4 def: type TK_IDENTIFIER '=' literal • ';'

    ';'  shift, and go to state 21


State 18

   18 function_init: type • TK_IDENTIFIER function_init2

    TK_IDENTIFIER  shift, and go to state 22


State 19

    6 def: type TK_IDENTIFIER '(' function_init • ')' command_block

    ')'  shift, and go to state 23


State 20

    5 def: type TK_IDENTIFIER '[' LIT_INT • ']' vector_init ';'

    ']'  shift, and go to state 24


State 21

    4 def: type TK_IDENTIFIER '=' literal ';' •

    $default  reduce using rule 4 (def)


State 22

   18 function_init: type TK_IDENTIFIER • function_init2

    ','  shift, and go to state 25

    $default  reduce using rule 19 (function_init2)

    function_init2  go to state 26


State 23

    6 def: type TK_IDENTIFIER '(' function_init ')' • command_block

    '{'  shift, and go to state 27

    command_block  go to state 28


State 24

    5 def: type TK_IDENTIFIER '[' LIT_INT ']' • vector_init ';'

    '='  shift, and go to state 29

    $default  reduce using rule 13 (vector_init)

    vector_init  go to state 30


State 25

   20 function_init2: ',' • type TK_IDENTIFIER function_init2

    KW_BYTE  shift, and go to state 1
    KW_INT   shift, and go to state 2
    KW_REAL  shift, and go to state 3

    type  go to state 31


State 26

   18 function_init: type TK_IDENTIFIER function_init2 •

    $default  reduce using rule 18 (function_init)


State 27

   21 command_block: '{' • command_list '}'

    KW_IF          shift, and go to state 32
    KW_DO          shift, and go to state 33
    KW_WHILE       shift, and go to state 34
    KW_READ        shift, and go to state 35
    KW_PRINT       shift, and go to state 36
    KW_RETURN      shift, and go to state 37
    TK_IDENTIFIER  shift, and go to state 38
    '{'            shift, and go to state 27
    ';'            shift, and go to state 39

    $default  reduce using rule 22 (command_list)

    command_block  go to state 40
    command_list   go to state 41
    command        go to state 42


State 28

    6 def: type TK_IDENTIFIER '(' function_init ')' command_block •

    $default  reduce using rule 6 (def)


State 29

   14 vector_init: '=' • literal vector_lits

    LIT_INT   shift, and go to state 14
    LIT_CHAR  shift, and go to state 15
    LIT_REAL  shift, and go to state 16

    literal  go to state 43


State 30

    5 def: type TK_IDENTIFIER '[' LIT_INT ']' vector_init • ';'

    ';'  shift, and go to state 44


State 31

   20 function_init2: ',' type • TK_IDENTIFIER function_init2

    TK_IDENTIFIER  shift, and go to state 45


State 32

   30 command: KW_IF • '(' expression ')' command ';'
   31        | KW_IF • '(' expression ')' command KW_ELSE command ';'

    '('  shift, and go to state 46


State 33

   33 command: KW_DO • command KW_WHILE '(' expression ')' ';'

    KW_IF          shift, and go to state 32
    KW_DO          shift, and go to state 33
    KW_WHILE       shift, and go to state 34
    KW_READ        shift, and go to state 35
    KW_PRINT       shift, and go to state 36
    KW_RETURN      shift, and go to state 37
    TK_IDENTIFIER  shift, and go to state 38
    '{'            shift, and go to state 27
    ';'            shift, and go to state 39

    command_block  go to state 40
    command        go to state 47


State 34

   32 command: KW_WHILE • expression KW_DO command

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 51


State 35

   27 command: KW_READ • TK_IDENTIFIER ';'

    TK_IDENTIFIER  shift, and go to state 52


State 36

   28 command: KW_PRINT • print ';'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_STRING     shift, and go to state 53
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 54
    print       go to state 55


State 37

   29 command: KW_RETURN • expression ';'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 56


State 38

   25 command: TK_IDENTIFIER • '=' expression ';'
   26        | TK_IDENTIFIER • '[' expression ']' '=' expression ';'

    '='  shift, and go to state 57
    '['  shift, and go to state 58


State 39

   34 command: ';' •

    $default  reduce using rule 34 (command)


State 40

   24 command: command_block •

    $default  reduce using rule 24 (command)


State 41

   21 command_block: '{' command_list • '}'

    '}'  shift, and go to state 59


State 42

   23 command_list: command • command_list

    KW_IF          shift, and go to state 32
    KW_DO          shift, and go to state 33
    KW_WHILE       shift, and go to state 34
    KW_READ        shift, and go to state 35
    KW_PRINT       shift, and go to state 36
    KW_RETURN      shift, and go to state 37
    TK_IDENTIFIER  shift, and go to state 38
    '{'            shift, and go to state 27
    ';'            shift, and go to state 39

    $default  reduce using rule 22 (command_list)

    command_block  go to state 40
    command_list   go to state 60
    command        go to state 42


State 43

   14 vector_init: '=' literal • vector_lits

    ','  shift, and go to state 61

    $default  reduce using rule 15 (vector_lits)

    vector_lits  go to state 62


State 44

    5 def: type TK_IDENTIFIER '[' LIT_INT ']' vector_init ';' •

    $default  reduce using rule 5 (def)


State 45

   20 function_init2: ',' type TK_IDENTIFIER • function_init2

    ','  shift, and go to state 25

    $default  reduce using rule 19 (function_init2)

    function_init2  go to state 63


State 46

   30 command: KW_IF '(' • expression ')' command ';'
   31        | KW_IF '(' • expression ')' command KW_ELSE command ';'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 64


State 47

   33 command: KW_DO command • KW_WHILE '(' expression ')' ';'

    KW_WHILE  shift, and go to state 65


State 48

   35 expression: TK_IDENTIFIER •
   36           | TK_IDENTIFIER • '[' expression ']'
   53           | TK_IDENTIFIER • '(' function_args ')'

    '('  shift, and go to state 66
    '['  shift, and go to state 67

    '('       [reduce using rule 35 (expression)]
    $default  reduce using rule 35 (expression)


State 49

   52 expression: '(' • expression ')'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 68


State 50

   37 expression: literal •

    $default  reduce using rule 37 (expression)


State 51

   32 command: KW_WHILE expression • KW_DO command
   38 expression: expression • '+' expression
   39           | expression • '-' expression
   40           | expression • '*' expression
   41           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • '>' expression
   44           | expression • '=' expression
   45           | expression • '&' expression
   46           | expression • '|' expression
   47           | expression • '~' expression
   48           | expression • OPERATOR_DIF expression
   49           | expression • OPERATOR_EQ expression
   50           | expression • OPERATOR_GE expression
   51           | expression • OPERATOR_LE expression

    KW_DO         shift, and go to state 69
    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_DIF  shift, and go to state 73
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '='           shift, and go to state 76
    '+'           shift, and go to state 77
    '-'           shift, and go to state 78
    '*'           shift, and go to state 79
    '/'           shift, and go to state 80
    '&'           shift, and go to state 81
    '~'           shift, and go to state 82
    '|'           shift, and go to state 83


State 52

   27 command: KW_READ TK_IDENTIFIER • ';'

    ';'  shift, and go to state 84


State 53

   58 print: LIT_STRING • print2

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_STRING     shift, and go to state 85
    '('            shift, and go to state 49

    $default  reduce using rule 60 (print2)

    literal     go to state 50
    expression  go to state 86
    print2      go to state 87


State 54

   38 expression: expression • '+' expression
   39           | expression • '-' expression
   40           | expression • '*' expression
   41           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • '>' expression
   44           | expression • '=' expression
   45           | expression • '&' expression
   46           | expression • '|' expression
   47           | expression • '~' expression
   48           | expression • OPERATOR_DIF expression
   49           | expression • OPERATOR_EQ expression
   50           | expression • OPERATOR_GE expression
   51           | expression • OPERATOR_LE expression
   59 print: expression • print2

    OPERATOR_LE    shift, and go to state 70
    OPERATOR_GE    shift, and go to state 71
    OPERATOR_EQ    shift, and go to state 72
    OPERATOR_DIF   shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_STRING     shift, and go to state 85
    '<'            shift, and go to state 74
    '>'            shift, and go to state 75
    '='            shift, and go to state 76
    '+'            shift, and go to state 77
    '-'            shift, and go to state 78
    '*'            shift, and go to state 79
    '/'            shift, and go to state 80
    '&'            shift, and go to state 81
    '~'            shift, and go to state 82
    '|'            shift, and go to state 83
    '('            shift, and go to state 49

    $default  reduce using rule 60 (print2)

    literal     go to state 50
    expression  go to state 86
    print2      go to state 88


State 55

   28 command: KW_PRINT print • ';'

    ';'  shift, and go to state 89


State 56

   29 command: KW_RETURN expression • ';'
   38 expression: expression • '+' expression
   39           | expression • '-' expression
   40           | expression • '*' expression
   41           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • '>' expression
   44           | expression • '=' expression
   45           | expression • '&' expression
   46           | expression • '|' expression
   47           | expression • '~' expression
   48           | expression • OPERATOR_DIF expression
   49           | expression • OPERATOR_EQ expression
   50           | expression • OPERATOR_GE expression
   51           | expression • OPERATOR_LE expression

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_DIF  shift, and go to state 73
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '='           shift, and go to state 76
    '+'           shift, and go to state 77
    '-'           shift, and go to state 78
    '*'           shift, and go to state 79
    '/'           shift, and go to state 80
    '&'           shift, and go to state 81
    '~'           shift, and go to state 82
    '|'           shift, and go to state 83
    ';'           shift, and go to state 90


State 57

   25 command: TK_IDENTIFIER '=' • expression ';'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 91


State 58

   26 command: TK_IDENTIFIER '[' • expression ']' '=' expression ';'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 92


State 59

   21 command_block: '{' command_list '}' •

    $default  reduce using rule 21 (command_block)


State 60

   23 command_list: command command_list •

    $default  reduce using rule 23 (command_list)


State 61

   16 vector_lits: ',' • literal vector_lits

    LIT_INT   shift, and go to state 14
    LIT_CHAR  shift, and go to state 15
    LIT_REAL  shift, and go to state 16

    literal  go to state 93


State 62

   14 vector_init: '=' literal vector_lits •

    $default  reduce using rule 14 (vector_init)


State 63

   20 function_init2: ',' type TK_IDENTIFIER function_init2 •

    $default  reduce using rule 20 (function_init2)


State 64

   30 command: KW_IF '(' expression • ')' command ';'
   31        | KW_IF '(' expression • ')' command KW_ELSE command ';'
   38 expression: expression • '+' expression
   39           | expression • '-' expression
   40           | expression • '*' expression
   41           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • '>' expression
   44           | expression • '=' expression
   45           | expression • '&' expression
   46           | expression • '|' expression
   47           | expression • '~' expression
   48           | expression • OPERATOR_DIF expression
   49           | expression • OPERATOR_EQ expression
   50           | expression • OPERATOR_GE expression
   51           | expression • OPERATOR_LE expression

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_DIF  shift, and go to state 73
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '='           shift, and go to state 76
    '+'           shift, and go to state 77
    '-'           shift, and go to state 78
    '*'           shift, and go to state 79
    '/'           shift, and go to state 80
    '&'           shift, and go to state 81
    '~'           shift, and go to state 82
    '|'           shift, and go to state 83
    ')'           shift, and go to state 94


State 65

   33 command: KW_DO command KW_WHILE • '(' expression ')' ';'

    '('  shift, and go to state 95


State 66

   53 expression: TK_IDENTIFIER '(' • function_args ')'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    $default  reduce using rule 54 (function_args)

    literal        go to state 50
    expression     go to state 96
    function_args  go to state 97


State 67

   36 expression: TK_IDENTIFIER '[' • expression ']'

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 98


State 68

   38 expression: expression • '+' expression
   39           | expression • '-' expression
   40           | expression • '*' expression
   41           | expression • '/' expression
   42           | expression • '<' expression
   43           | expression • '>' expression
   44           | expression • '=' expression
   45           | expression • '&' expression
   46           | expression • '|' expression
   47           | expression • '~' expression
   48           | expression • OPERATOR_DIF expression
   49           | expression • OPERATOR_EQ expression
   50           | expression • OPERATOR_GE expression
   51           | expression • OPERATOR_LE expression
   52           | '(' expression • ')'

    OPERATOR_LE   shift, and go to state 70
    OPERATOR_GE   shift, and go to state 71
    OPERATOR_EQ   shift, and go to state 72
    OPERATOR_DIF  shift, and go to state 73
    '<'           shift, and go to state 74
    '>'           shift, and go to state 75
    '='           shift, and go to state 76
    '+'           shift, and go to state 77
    '-'           shift, and go to state 78
    '*'           shift, and go to state 79
    '/'           shift, and go to state 80
    '&'           shift, and go to state 81
    '~'           shift, and go to state 82
    '|'           shift, and go to state 83
    ')'           shift, and go to state 99


State 69

   32 command: KW_WHILE expression KW_DO • command

    KW_IF          shift, and go to state 32
    KW_DO          shift, and go to state 33
    KW_WHILE       shift, and go to state 34
    KW_READ        shift, and go to state 35
    KW_PRINT       shift, and go to state 36
    KW_RETURN      shift, and go to state 37
    TK_IDENTIFIER  shift, and go to state 38
    '{'            shift, and go to state 27
    ';'            shift, and go to state 39

    command_block  go to state 40
    command        go to state 100


State 70

   51 expression: expression OPERATOR_LE • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 101


State 71

   50 expression: expression OPERATOR_GE • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 102


State 72

   49 expression: expression OPERATOR_EQ • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 103


State 73

   48 expression: expression OPERATOR_DIF • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 104


State 74

   42 expression: expression '<' • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 105


State 75

   43 expression: expression '>' • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 106


State 76

   44 expression: expression '=' • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 107


State 77

   38 expression: expression '+' • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 108


State 78

   39 expression: expression '-' • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 109


State 79

   40 expression: expression '*' • expression

    TK_IDENTIFIER  shift, and go to state 48
    LIT_INT        shift, and go to state 14
    LIT_CHAR       shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    '('            shift, and go to state 49

    literal     go to state 50
    expression  go to state 110


State 80

   41 expression: expression '/' • expression
